<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.techtown.veganproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        android:fontFamily="@font/nixgonfonts"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_diary"
        android:name="org.techtown.veganproject.ui.diary.diaryFragment"
        android:label="@string/menu_diary"
        android:fontFamily="@font/nixgonfonts"
        tools:layout="@layout/fragment_diary" />

    <fragment
        android:id="@+id/nav_map"
        android:name="org.techtown.veganproject.ui.map.mapFragment"
        android:label="@string/menu_map"
        android:fontFamily="@font/nixgonfonts"
        tools:layout="@layout/fragment_map_f" />

    <fragment
        android:id="@+id/nav_barcode"
        android:name="org.techtown.veganproject.ui.barcode.barcodeFragment"
        android:label="@string/menu_barcode"
        android:fontFamily="@font/nixgonfonts"
        tools:layout="@layout/fragment_barcode" />

    <fragment
        android:id="@+id/nav_recipe"
        android:name="org.techtown.veganproject.ui.recipe.recipeFragment"
        android:label="@string/menu_recipe"
        android:fontFamily="@font/nixgonfonts"
        tools:layout="@layout/fragment_recipe" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="org.techtown.veganproject.ui.setting.settingFragment"
        android:label="@string/menu_setting"
        android:fontFamily="@font/nixgonfonts"
        tools:layout="@layout/fragment_setting" />

</navigation>